--- a/1.0_conda/1.0_conda.md
+++ b/1.0_conda/1.0_conda.md
@@ -64,6 +64,8 @@ pip config set global.cache-dir "自定义目录"
 
   设置环境变量`XDG_CACHE_HOME`为自定义目录
 
+![huggingface cache配置环境变量](image.png)
+
 - huggingface代理配置
 
   针对huggingface无法访问，可以设置全局或临时环境变量，`set HF_ENDPOINT=https://hf-mirror.com`, linux下每次执行代码前执行`export HF_ENDPOINT=https://hf-mirror.com`
@@ -71,3 +73,5 @@ pip config set global.cache-dir "自定义目录"
 - modelscope的cache配置
 
   设置环境变量`MODELSCOPE_CACHE`为自定义目录
+
+![modelscope配置环境变量](image-1.png)
