--- a/1.0_conda/1.0_conda.md
+++ b/1.0_conda/1.0_conda.md
@@ -75,3 +75,10 @@ pip config set global.cache-dir "自定义目录"
   设置环境变量`MODELSCOPE_CACHE`为自定义目录
 
 ![modelscope配置环境变量](image-1.png)
+
+
+- ollama的模型下载目录
+
+  默认情况下，Ollama的模型可能会下载到`C:\Users\<用户名>\.ollama\models`， 如果系统盘环境紧张，那么可以修改，通过设置环境变量`OLLAMA_MODELS`来修改
+
+  ![ollama](image-2.png)
